SAK-52812 Lessons address review feedback